# casictool

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  casic.py  casic1.md  casic2.md  casic_hwtest.py  casictool.1.md  casictool.py  connection.py  job.py  pyproject.toml
.claude/: settings.json
man/: Makefile  casictool.1  casictool.1.md  casictool.1.src.md
plan/: casictool.md  configprops.md  hwtest.md  logging.md  message-config-changes.md  navx-dymodel.md  navx-mask.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  set-time-pulse.md  testability.md
spec/: README.md  casic-fm.md  casic-time.md  casic1.md  casic2.md  errata.md  notes.md  zkw3.md
tests/: test_casic.py  test_pps.py  test_time_mode.py  test_timing_mode.py
